--- a/reactgrupal/src/components/assets/css/Descuentos.css
+++ b/reactgrupal/src/components/assets/css/Descuentos.css
@@ -1,11 +1,11 @@
-.banner {
+.banner-descuentos {
     background-image: url(../img/ropa/banner/apartados/descuentos.gif);
     background-position: center;
     background-size: cover;
     height: 400px;
 }
 
-.banner {
+.banner-descuentos {
     font-family: 'Bebas Neue', cursive;
     color: white;
     display: grid;
@@ -15,7 +15,7 @@
     padding: 0 4rem;
 }
 
-.banner h1 {
+.banner-descuentos h1 {
     letter-spacing: 2px;
     text-shadow: 2px 2px 5px rgba(128, 128, 128, 0.743);
     padding: 1rem;
@@ -23,4 +23,549 @@
     font-size: 240px;
     border-left: 5px solid white;
     font-weight: 300;
+}
+
+.contenedor-descuentos {
+    background-color: #f0eaf9;
+    padding: 1rem 2rem;
+    text-align: center;
+    color: #19191B;
+    height: fit-content;
+}
+
+.contenedor-descuentos h1 {
+    font-size: 70px;
+}
+
+.container-descuentos {
+    margin-top: 20px;
+    place-items: center;
+}
+
+.container-descuentos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 10px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "boton1 boton1 boton2"
+        ". . ."
+        ". . .";
+}
+
+.boton1 {display: flex;
+    grid-area: boton1;
+    margin-right: 20rem;
+}
+
+.boton2 {
+    grid-area: boton2;
+}
+
+.container-descuentos2 {
+    place-items: center;
+}
+
+.container-descuentos2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 30px 12px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "venta1 venta2 venta3"
+        "venta4 venta5 venta6"
+        "venta7 venta8 venta9";
+}
+
+.venta1 {
+    grid-area: venta1;
+}
+
+.venta2 {
+    grid-area: venta2;
+}
+
+.venta3 {
+    grid-area: venta3;
+}
+
+.venta4 {
+    grid-area: venta4;
+}
+
+.venta5 {
+    grid-area: venta5;
+}
+
+.venta6 {
+    grid-area: venta6;
+}
+
+.venta7 {
+    grid-area: venta7;
+}
+
+.venta8 {
+    grid-area: venta8;
+}
+
+.venta9 {
+    grid-area: venta9;
+}
+
+.container-descuentos2 img {
+    width: 380px;
+}
+
+select {
+    border: 3px solid #A695C2;
+    font-family: Montserrat;
+    border-radius: 50px;
+    padding: 0 1rem;
+    width: 100%;
+    max-width: 150px;
+}
+
+
+.popularidad {
+    max-width: 400px;
+    width: 100%;
+    margin-right: 3rem;
+}
+
+.card {
+    background-color: #A695C2;
+    border: #A695C2;
+    border-style: solid;
+    max-width: 28.5vw;
+    width: 100%;
+    border-radius: 32px;
+}
+
+.card img {
+    border-top-left-radius: 28.5px;
+    border-top-right-radius: 28.5px;
+    width: 100%;
+    max-width: 380px;
+    max-height: 500px;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+}
+
+.text-card {
+    padding: 1px 0;
+}
+
+.text-card h4 {
+    padding: 0.5rem 0;
+    font-size: 20px;
+    background-color: #A695C2;
+    border-radius: 5px;
+}
+
+.text-card p {
+    padding: 0.5rem 0;
+    background-color: #cfb9fa;
+}
+
+.select-icon {
+    border-bottom-right-radius: 32px;
+    border-bottom-left-radius: 32px;
+    padding: 1rem 0;
+    background-color: #e2d7fb;
+}
+
+.select-icon select {
+    height: 30px;
+    font-weight: bolder;
+    color: #8765be;
+}
+
+
+.select-icon i {
+    margin: 0 0.5rem;
+    width: 40px;
+    font-size: 20px;
+    background-color: #A695C2;
+    padding: 0.5rem;
+    border-radius: 10px;
+}
+
+/* :::::::::::::::::::::::::::::: SLIDES ::::::::::::::::::::::::::::::: */
+
+.container-descuentos3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "solo botones solo2"
+        ". . ."
+        ". . .";
+}
+
+.solo {
+    grid-area: solo;
+}
+
+.botones {
+    grid-area: botones;
+}
+
+.solo2 {
+    grid-area: solo2;
+}
+
+.botones {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+}
+
+.botones a {
+    text-decoration: none;
+    color: black;
+}
+
+.bt-1 {
+    background-color: #A695C2;
+    padding: 8px 1rem;
+    border-radius: 100px;
+}
+
+.bt-2,
+.bt-3,
+.bt-4 {
+    background-color: #cfb9fa;
+    padding: 8px 1rem;
+    border-radius: 100px;
+}
+
+.botones h2 {
+    font-size: 20px;
+}
+
+.botones h3 {
+    font-size: 20px;
+}
+/* ::::::::::::::::::::::::::::::::::::::::: MODAL ::::::::::::::::::::::::::::::::::::::::: */
+
+/* ::::::::::::::::::::::::: MODAL :::::::::::::::::::::: */
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.close{
+    display: block;
+    position: absolute;
+    top: 40px;
+    right: 60px;
+    background: rgb(255, 0, 76);
+    color: white;
+    text-decoration: none;
+    width: 40px;
+    height: 40px;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+}
+
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #cfb9fa8f;
+    display: flex;
+    --opacity: 0;
+    --pointer: none;
+
+    opacity: var(--opacity);
+    pointer-events: var(--pointer);
+    transition: opacity 0.5s;
+}
+
+.modal:target{
+    --opacity: var(--opacity);
+    --pointer: unset;
+}
+
+.modalcontainer-descuentos{
+    display: flex;
+    margin: auto;
+    background-color: white;
+    width: 100vw;
+    max-width: 1050px;
+    max-height: 100%;
+    overflow: hidden;
+    text-align: center;
+    padding: 3rem 2rem;
+    border-radius: 1em;
+}
+
+.modal:target .modalcontainer-descuentos{
+    animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes scale-in-center {
+    0% {
+      transform: scale(0);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+}
+
+.modal:target .modalPicture{
+    animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.modalPicture img{
+    max-width: 400px;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-height: 600px;
+    object-fit: fill;
+    border-radius: 30px;
+    box-shadow: 0px 0px 5px 2px rgb(170, 170, 170);
+}
+
+.modalPicture{
+    margin: 0 2rem;
+    object-fit: cover;
+}
+
+.modalTitle{
+    background-color: #8765be;
+    border-top-left-radius: 28.5px;
+    border-top-right-radius: 28.5px;
+    padding: 1.5rem 0;
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
+.modal:target .modalTitle{
+    animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.modalTEXT{
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    justify-content: center;
+}
+
+.modalTEXT p{
+    background-color: #b8a5d5;
+    padding: 2rem 3rem;
+}
+  
+
+.modalTitle--bold{
+    font-weight: 800;
+}
+
+.modalP{
+    line-height: 1.5;
+    text-align: justify;
+}
+
+.charact{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #cfb9fa;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+}
+
+
+.charact li{
+    list-style: disc;
+}
+
+/* ::::::::::::: MEDIA QUERY: celular ::::::::::::: */
+@media only screen and (max-width : 360px) {
+    .container {
+        display: grid;
+        grid-template-columns: 150px;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 0px 10px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "boton1"
+            "boton1"
+            "boton2";
+    }
+
+    .boton1 select{ width:500px; margin-left: 5rem;}
+
+    .boton2 select{margin-top: 5rem; margin-left: 4rem; margin-bottom: 3rem;}
+}
+
+/* ::::::::::::: MEDIA QUERY: celular ::::::::::::: */
+@media only screen and (min-device-width : 320px) and (max-device-width : 700px) {
+    body{overflow-x: hidden;}
+    footer{overflow: hidden;}
+    header{overflow: hidden;}
+    body{overflow-x: hidden; width: 100vw;}
+    section{
+        overflow: hidden;
+    }
+
+    main{
+        overflow: hidden;
+    }
+
+
+    .contenedor-descuentos h1 {
+        font-size: 50px;
+    }
+
+
+    .container-descuentos {
+        display: grid;
+        grid-template-columns: 150px 50px;
+        grid-template-rows: 1fr 1fr;
+        gap: 0px 10px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "boton1 boton2"
+            "boton1";
+    }
+    
+    select {
+        border: 3px solid #A695C2;
+        font-family: Montserrat;
+        border-radius: 50px;
+        padding: 0 1rem;
+        width: 100%;
+        max-width: 160px;
+    }
+
+    .boton1 {
+        flex-direction: column;
+        grid-area: boton1;
+        margin-right: 0rem;
+        margin-left: 3rem;
+        margin-bottom: -2rem;
+    }
+
+    .popularidad {
+        max-width: 153px;
+    }
+
+    .container2 {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        gap: 30px 12px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "venta1"
+            "venta2"
+            "venta3"
+            "venta4"
+            "venta5"
+            "venta6"
+            "venta7"
+            "venta8"
+            "venta9";
+    }
+
+    .card {
+        background-color: #A695C2;
+        border: #A695C2;
+        border-style: solid;
+        max-width: 63vw;
+        width: 100%;
+        border-radius: 32px;
+    }
+
+    .modalContainer{flex-direction: column; overflow-y: scroll; padding-top: 0rem;width: 75vw; height: 90vw;}
+    .modalTitle{font-size: 3vw;}
+    .modalP{font-size: 1.5vw;}
+    .modalTEXT{ margin-top: 2rem;}
+    .modalTEXT p{padding: 1rem;}
+    .charact li{font-size: 1.5vw;}
+    .close{right: 40px; top: 20px;}
+    .modalPicture img{object-fit: cover; width: 60vw;}
+    .modalPicture{margin-top: 3rem; margin-left: 0rem;}
+
+    .modalTitle{width: 60vw;}
+    .modalP{width:60vw;}
+    .charact{width: 60vw;}
+    .modalTEXT .select-icon{width: 60vw;}
+
+}
+
+
+/* :::::::::::::: MEDIA QUERY : media de celular a tablet ::::::::::::::::: */
+@media (min-width: 481px) and (max-width: 767px) {
+    .boton1 select{width: 200px;}
+    .boton1 {display: flex;
+        flex-direction: column;
+        margin-bottom: -3rem;
+        grid-area: boton1;
+        margin-right: 6rem;
+    }
+    body{overflow-x: hidden;}
+    footer{overflow: hidden;}
+    header{overflow: hidden;}
+    body{overflow-x: hidden;}
+    .contenedor-descuentos{align-items: center; align-content: center; align-self: center;}
+
+    .modalTEXT{width: 50vw; height: 50vw;}
+    .modalTitle{font-size: 3vw;}
+    .modalP{font-size: 1.5vw;}
+    .modalTEXT p{padding: 1rem;}
+    .charact li{font-size: 1.5vw;}
+    .modalContainer{width: 75vw; height: 65vw;}
+    .close{right: 40px;}
+    .modalPicture img{object-fit: cover;}
+    .modalPicture{margin-top: 3rem;}
+
+}
+
+
+
+
+/* :::::::::::::: MEDIA QUERY : Tablet ::::::::::::::::: */
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    .boton1 select{width: 110px;}
+    .boton1 {display: flex;
+        grid-area: boton1;
+        margin-right: 1rem;
+    }
+
+    .modalTEXT{width: 50vw; height: 50vw;}
+    .modalTitle{font-size: 3vw;}
+    .modalP{font-size: 1.5vw;}
+    .modalTEXT p{padding: 1rem;}
+    .charact li{font-size: 1.5vw;}
+    .modalContainer{width: 75vw; height: 65vw;}
+    .close{right: 40px;}
+    .modalPicture img{object-fit: cover;}
+    .modalPicture{margin-top: 3rem;}
+    
+    body{overflow-x: hidden;}
+    footer{overflow: hidden;}
+    header{overflow: hidden; height: 200px;}
+    body{overflow-x: hidden;}
+    .viste-a-la-moda{width: 100%; overflow-x: hidden;}
+    .card{max-height: 100%;}
+    .card img{max-height: 300px; height: 100%;}
+    .text-card h4{font-size: 16px;}
 }
