--- a/reactgrupal/src/components/assets/css/Tendencias.css
+++ b/reactgrupal/src/components/assets/css/Tendencias.css
@@ -1,7 +1,7 @@
 /* ::::::::::::::::::::::::::::::::::::::::: BODY ::::::::::::::::::::::::::::::::::::::::: */
 
 .banner-nov {
-    background-image: url(../img/ropa/banner/apartados/tendencias.gif);
+    background-image: url(https://images.unsplash.com/photo-1590739241856-cc8c15419fc5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1109&q=80);
     background-position: center;
     background-size: cover;
     width: 100vw;
@@ -36,12 +36,12 @@
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
-        "sidebar sidebar content content"
-        "sidebar sidebar content content"
-        "sidebar sidebar content content"
-        "sidebar sidebar content content"
-        "sidebar sidebar content content"
-        "sidebar sidebar content content";
+        "content content content"
+        "content content content"
+        "content content content"
+        "content content content"
+        "content content content"
+        "content content content";
 }
 
 .sidebar {
@@ -159,8 +159,9 @@
     font-weight: 600;
     text-align: center;
     font-size: 20px;
-    border-bottom: 5px solid grey;
+    border-bottom: 5px solid #875dca;
     padding-bottom: 2rem;
+    color: #3f039f;
 }
 
 
@@ -288,7 +289,7 @@
 }
 
 .special{
-    color: #D97769;
+    color: #875dca;
     font-weight: bold;
 }
 
@@ -317,12 +318,12 @@ body{overflow-x: hidden;}
         grid-template-columns: repeat(auto-fill, 28vw);
         grid-auto-flow: row;
         grid-template-areas:
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content";
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content";
     }
 
     .sidebar {
@@ -393,12 +394,12 @@ body{overflow-x: hidden;}
         grid-template-columns: repeat(auto-fill, 28vw);
         grid-auto-flow: row;
         grid-template-areas:
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content";
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content";
     }
 
     .sidebar {
@@ -464,12 +465,12 @@ body{overflow-x: hidden;}
         grid-template-columns: repeat(auto-fill, 18vw);
         grid-auto-flow: row;
         grid-template-areas:
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content";
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content";
     }
 
     .sidebar {
@@ -537,12 +538,12 @@ body{overflow-x: hidden;}
         grid-template-columns: repeat(auto-fill, 15vw);
         grid-auto-flow: row;
         grid-template-areas:
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content"
-            "sidebar sidebar content content";
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content"
+            "content content content";
     }
 
     .sidebar {
