--- a/reactgrupal/src/components/assets/css/Vestidos.css
+++ b/reactgrupal/src/components/assets/css/Vestidos.css
@@ -18,7 +18,7 @@ body{
 /* ::::::::::::::::::::::::::::::::::::::::: BODY ::::::::::::::::::::::::::::::::::::::::: */
 
 .viste-a-la-moda {
-    background-image: url(https://img.freepik.com/free-photo/woman-with-handbag-close-up-white-background_176873-12611.jpg?w=740);
+    background-image: url(https://res.cloudinary.com/colombia/image/upload/v1654473531/kuepa/zyro-image_jkvooy.jpg);
     background-position: center;
     background-size: cover;
     width: 100%;
