picture of banner was modified in in descuentosrs.js

--- a/reactgrupal/src/components/assets/css/Descuentos.css
+++ b/reactgrupal/src/components/assets/css/Descuentos.css
@@ -1,5 +1,5 @@
 .banner-descuentos {
-    background-image: url(https://res.cloudinary.com/colombia/image/upload/v1654479462/kuepa/arno-senoner-UhvEJosq-Zo-unsplash-7902x5926_a1y5mq.jpg);
+    background-image: url(https://images.unsplash.com/photo-1545535408-2b4d520cbd88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
     background-position: center;
     background-size: cover;
     height: 450px;
