--- a/reactgrupal/src/components/header/header.css
+++ b/reactgrupal/src/components/header/header.css
@@ -88,6 +88,20 @@ a{
     margin-top: 0;
 }
 
+/* ----------------------------------  | SIN ALERTA | ----------------------------------*/
+.headerBox-NoAlert {
+    display: flex;
+    grid-area: boxline;
+    height: 3vh;
+    width: 100%;
+    background-color: #655F5F;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    margin-top: 0;
+}
+
+/* --------------------------------------------------------------------------*/
 .headerBox p {
     font-size: 2vw;
     text-align: center;
